// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link passes href down to link element 1`] = `
.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0366d6;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="emotion-0"
  href="https://github.com"
/>
`;

exports[`Link renders without any props 1`] = `
.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0366d6;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="emotion-0"
/>
`;
